# CS2-Market-Analysis

./: .dockerignore  .env.example  .gitignore  DEVLOG.md  Dockerfile  README.md  mise.toml  prefect.yaml  pyproject.toml
dashboard/: README.md  observablehq.config.js  package.json  worker.js  wrangler.toml
dashboard/src/: index.md  items.md
dashboard/src/data/: item_kpis_snapshot.parquet.py  loader.py  market_kpis.parquet.py  rpt_commodity_velocity_daily.parquet.py  rpt_item_metrics_latest.parquet.py  rpt_market_metrics_daily.parquet.py
dashboards/: README.md
flows/: deploy.py  main_flow.py
infra/: Pulumi.prod.yaml  Pulumi.yaml  __main__.py  preflight.py
infra/sdks/prefect/: pyproject.toml
infra/sdks/prefect/pulumi_prefect/: README.md  __init__.py  _inputs.py  _utilities.py  account.py  account_member.py  automation.py  block.py  block_access.py  block_schema.py  block_type.py  deployment.py  deployment_access.py  deployment_schedule.py  flow.py  get_account.py  get_account_member.py  get_account_members.py  get_account_role.py  get_automation.py  get_block.py  get_deployment.py  get_global_concurrency_limit.py  get_service_account.py  get_team.py  get_teams.py  get_variable.py  get_webhook.py  get_work_pool.py  get_work_pools.py  get_work_queue.py  get_work_queues.py  get_worker_metadata.py  get_workspace.py  get_workspace_role.py  global_concurrency_limit.py  outputs.py  provider.py  pulumi-plugin.json  resource_sla.py  (+14 more)
infra/sdks/prefect/pulumi_prefect/config/: __init__.pyi  vars.py
pipelines/extract-load/: ingest_market_data.py  items.py
pipelines/extract_load/: ingest_market_data.py
pipelines/transform/: dbt_project.yml  profiles.yml
pipelines/transform/macros/: export_parquet.sql
pipelines/transform/models/marts/: dim_item.sql  fct_market_daily.sql  fct_market_snapshot_daily.sql  fct_volume_daily.sql  schema.yml
pipelines/transform/models/marts/reporting/: item_group_summary.sql  item_kpis_snapshot.sql  item_liquidity_kpis.sql  market_kpis.sql  rpt_commodity_velocity_daily.sql  rpt_item_metrics_latest.sql  rpt_market_metrics_daily.sql  schema.yml
pipelines/transform/models/staging/: schema.yml  sources.yml  stg_item_price_history.sql  stg_items.sql
