[project]
  name = "pulumi_prefect"
  description = "A Pulumi provider dynamically bridged from prefect."
  dependencies = ["parver>=0.2.1", "pulumi>=3.165.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11,<5; python_version < \"3.11\""]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "3.0.1"
  [project.urls]
    Repository = "https://github.com/prefecthq/terraform-provider-prefect"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_prefect = ["py.typed", "pulumi-plugin.json"]
